feat: dashboard updates
